# IntelliTest

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
.aitestagent/: history.txt  session_state.json
.aitestagent/checkpoints/: checkpoint.json
docs/: CLI_REFERENCE.md  IMPROVEMENT_TASKS.md  interactive_mode_dependencies.md  interactive_mode_design.md  interactive_mode_plan.md  interactive_mode_requirements.md  usage.md
src/ai-test-agent/: cli.py  config.py
src/ai-test-agent/agent/: agent.py  prompts.py  tools.py
src/ai-test-agent/executor/: environment.py  test_runner.py
src/ai-test-agent/explorer/: analyzer.py  file_tools.py  parser.py
src/ai-test-agent/generator/: data_generator.py  test_generator.py
src/ai-test-agent/generator/templates/: java_test.j2  javascript_test.j2  python_test.j2
src/ai-test-agent/reporting/: aggregator.py  coverage.py  reporter.py
src/ai_test_agent/: cli.py
src/ai_test_agent/agent/: agent.py  prompts.py  session.py  tools.py
src/ai_test_agent/executor/: environment.py  test_runner.py
src/ai_test_agent/explorer/: analyzer.py  file_tools.py  parser.py
src/ai_test_agent/generator/: data_generator.py  test_generator.py
src/ai_test_agent/interactive/: __init__.py  command_router.py  shell.py
src/ai_test_agent/reporting/: aggregator.py  coverage.py  reporter.py
